# pythonisms

./: README.md  linked_list_iterator.py  pyproject.toml  test_linked_list_iterator.py
